--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <h1>CSS Colored Markers</h1>          
+        <h1>CSS Colored Markers</h1>
+        <div class="container">
+            <div class="marker"></div>
+        </div>          
     </body>
 
 </html>
